// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly when end of list reached 1`] = `
<div
  class="more_fvrfzw1"
>
  <span>
    31 - 60
  </span>
  <a
    aria-label="Load previous posts"
    class="moreItem_f8pzcup"
    href="/newcomments"
    role="button"
  >
    &lt;
  </a>
  <a
    aria-label="Load next posts"
    class="moreItem_f8pzcup moreDisabled_fs9on40"
    disabled=""
    href="/newcomments/page/3"
    role="button"
  >
    &gt;
  </a>
</div>
`;

exports[`renders correctly when location is "/" 1`] = `
<div
  class="more_fvrfzw1"
>
  <span>
    1 - 30
  </span>
  <a
    aria-label="Load previous posts"
    class="moreItem_f8pzcup moreDisabled_fs9on40"
    disabled=""
    href="/"
    role="button"
  >
    &lt;
  </a>
  <a
    aria-label="Load next posts"
    class="moreItem_f8pzcup"
    href="/page/2"
    role="button"
  >
    &gt;
  </a>
</div>
`;

exports[`renders correctly when location is "/newcomments" 1`] = `
<div
  class="more_fvrfzw1"
>
  <span>
    1 - 30
  </span>
  <a
    aria-label="Load previous posts"
    class="moreItem_f8pzcup moreDisabled_fs9on40"
    disabled=""
    href="/newcomments"
    role="button"
  >
    &lt;
  </a>
  <a
    aria-label="Load next posts"
    class="moreItem_f8pzcup"
    href="/newcomments/page/2"
    role="button"
  >
    &gt;
  </a>
</div>
`;

exports[`renders correctly when location is "/newcomments/page/2" 1`] = `
<div
  class="more_fvrfzw1"
>
  <span>
    31 - 60
  </span>
  <a
    aria-label="Load previous posts"
    class="moreItem_f8pzcup"
    href="/newcomments"
    role="button"
  >
    &lt;
  </a>
  <a
    aria-label="Load next posts"
    class="moreItem_f8pzcup"
    href="/newcomments/page/3"
    role="button"
  >
    &gt;
  </a>
</div>
`;

exports[`renders correctly when location is "/page/5" 1`] = `
<div
  class="more_fvrfzw1"
>
  <span>
    121 - 150
  </span>
  <a
    aria-label="Load previous posts"
    class="moreItem_f8pzcup"
    href="/page/4"
    role="button"
  >
    &lt;
  </a>
  <a
    aria-label="Load next posts"
    class="moreItem_f8pzcup"
    href="/page/6"
    role="button"
  >
    &gt;
  </a>
</div>
`;
